--- a/styles/style.css
+++ b/styles/style.css
@@ -63,3 +63,25 @@ header section button {
     color: white;
     font-weight: bold;
 }
+
+#aboutUs div {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#aboutUs div h1 {
+    margin: 5% 0 3% 0;
+    font-size: 2.5vi;
+    font-weight: bold; 
+}
+
+#aboutUs div p {
+    line-height: 150%;
+    font-size: 1.1vi;
+    color: #838383;
+}
+
+#aboutUs div img {
+    margin: 3% 0 0 0;
+}
