--- a/styles/style.css
+++ b/styles/style.css
@@ -287,7 +287,7 @@ header section button {
     color: white;
     height: 50vh;
     font-size: 2.2vi;
-    padding-top: 10%;
+    padding-top: 20%;
     padding-bottom: 5%;
 }
 
@@ -323,4 +323,91 @@ header section button {
 
 #testimonials footer img {
     margin: 0 auto 0 auto;
+}
+
+#contact {
+    margin: 0 auto 0 auto;
+    width: 80%;
+    background-color: #E9E9E9;
+}
+
+#contact main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#contact main h1 {
+    margin-top: 10%;
+    margin-bottom: 3%;
+    font-size: 2vi;
+    font-weight: bold;
+}
+
+#contact main p {
+    margin-bottom: 1%;
+    letter-spacing: 1px;
+    font-size: 1.1vi;
+    color: #838383;
+}
+
+#contact main .bottomP {
+    margin-bottom: 3%;
+}
+
+form {
+    width: 60%;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+}
+
+#name {
+    width: 45%;
+}
+
+#email {
+    width: 45%;
+    margin-left: 4%;
+}
+
+#title {
+    width: 97.2%;
+    margin-bottom: 5%;
+}
+
+#contactInput{
+    width: 97.7%;
+    height: 20vh;
+    font-size: 1.1vi;
+    font-family: 'Lato', sans-serif;
+    padding: 2% 0 0 2%;
+}
+
+input {
+    height: 5vh;
+    margin: 2.5% 0 2.5% 0;
+    font-size: 1.1vi;
+    padding-left: 2%;
+}
+
+.buttonDiv {
+    width: 30%;
+    height: 6vh;
+    margin: 6% auto 10% auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#send {
+    background-color: #10C9C3;
+    color: white;
+    letter-spacing: 1px;
+    border: none;
+    font-size: 0.9vi;
+    font-weight: bold;
+    width: 100%;
+    height: 100%;
 }
